[build-system]
requires      = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name            = "TaskOrchestrator"
version         = "0.1.0"
authors         = [ { name = "Francisco Pereira", email = "fchamicapereira@gmail.com" } ]
description     = "A task orchestrator for running tasks in parallel while managing dependencies and execution order."
readme          = "README.md"
requires-python = ">=3.8"
classifiers     = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent" ]
keywords        = [ "utility", "tasks", "bash", "parallelism" ]

# [project.urls]
# Homepage = "https://github.com/yourusername/my_project"
# "Bug Tracker" = "https://github.com/yourusername/my_project/issues"
